--- a/Task.ipynb
+++ b/Task.ipynb
@@ -1058,7 +1058,7 @@
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
-      "  sns.barplot(x=df['date_added'].dt.year.value_counts().index, y=df['date_added'].dt.year.value_counts().values, palette='viridis')\n"
+      "  sns.barplot(x=df['date_added'].dt.year.value_counts().index, y=df['date_added'].dt.year.value_counts().values)\n"
      ]
     },
     {
